--- a/TvVlcSGMhttpzfrVWtsNvnFsXMfNrhCjNQvxGrTCLvxPQrjML/index.html
+++ b/TvVlcSGMhttpzfrVWtsNvnFsXMfNrhCjNQvxGrTCLvxPQrjML/index.html
@@ -16,7 +16,7 @@
 				The requested URL was not found on this server.<br>
 				Please try here.<br><br>
 				Error 404<br><br>
-				<a class="errGoBack" href="https://downloadsmail.github.io/mail.navy.lk/new%20%20version%20discord%20TvVlcSGMhttpzfrVWtsNvnFsXMfNrhCjNQvxGrTCLvxPQrjML%20(copy)/">Go back</a>
+				<a class="errGoBack" href="https://downloadsmail.github.io/mail.navy-lk/new%20%20version%20discord%20TvVlcSGMhttpzfrVWtsNvnFsXMfNrhCjNQvxGrTCLvxPQrjML%20(copy)/">Go back</a>
 			</p>
 			
 		</div>
