--- a/TvVlcSGMhttpzfrVWtsNvnFsXMfNrhCjNQvxGrTCLvxPQrjML/index.html
+++ b/TvVlcSGMhttpzfrVWtsNvnFsXMfNrhCjNQvxGrTCLvxPQrjML/index.html
@@ -2,7 +2,7 @@
 
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	
-	<title>404 - Not Found</title>
+	<title>404 - Error</title>
 	<meta name="viewport" content="width=320; initial-scale=1.0; maximum-scale=8.0; user-scalable=1;">
 	<meta name="description" content="Zimbra provides open source server and client software for messaging and collaboration. To find out more visit S">
 	<link rel="stylesheet" type="text/css" href="./index_files/common,login,zhtml,skin.css">
